cmake_minimum_required(VERSION 3.10)
project(ECE6122)
set(CMAKE_COLOR_MAKEFILE ON)
set(BUILD_TYPE_RELEASE TRUE)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
set(CMAKE_CXX_STANDARD 14)
add_subdirectory(lab0)
add_subdirectory(lab1)
add_subdirectory(lab2)
add_subdirectory(Lab3)
add_subdirectory(lab4)
add_subdirectory(Gatech-Buzzy-Bowl)
